# mlserver-yolov8

./: .gitignore  README.md  model-settings.json  model.py  pyproject.toml  requirements.txt  test.ipynb
